feat: Basic Platform Health admin page
